--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,10 @@
 sudo apt-get install libssl-dev
 sudo apt-get install libcurl4-openssl-dev
+sudo apt-get install build-essential
+sudo apt-get install libcrypto++-dev
+sudo apt-get install gfortran
+
+
 R:
 install.packages('httr')
 install.packages('jsonlite')
